--- a/src/main/java/thoiyk/HumanInterfaceComponent/buyer/buyerEditDialogClass.form
+++ b/src/main/java/thoiyk/HumanInterfaceComponent/buyer/buyerEditDialogClass.form
@@ -37,8 +37,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLayeredPane1" min="-2" pref="250" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <Component id="jLayeredPane1" min="-2" pref="285" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -74,7 +74,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JLayeredPaneSupportLayout$JLayeredPaneConstraintsDescription">
-              <JLayeredPaneConstraints x="0" y="0" width="510" height="230" layer="0" position="-1"/>
+              <JLayeredPaneConstraints x="0" y="0" width="510" height="280" layer="0" position="-1"/>
             </Constraint>
           </Constraints>
 
@@ -116,9 +116,12 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="2" pref="2" max="2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="ID" min="-2" pref="20" max="-2" attributes="0"/>
-                          <Component id="lblID" min="-2" pref="10" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="4" pref="4" max="-2" attributes="0"/>
+                              <Component id="lblID" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -156,7 +159,7 @@
                           <Component id="buyerkontakidLbl" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                           <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="25" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -164,9 +167,6 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="lblID">
               <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Arial" size="10" style="0"/>
-                </Property>
                 <Property name="horizontalAlignment" type="int" value="2"/>
                 <Property name="text" type="java.lang.String" value="Id :"/>
               </Properties>
@@ -187,7 +187,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblNama">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nama:"/>
+                <Property name="text" type="java.lang.String" value="Name          :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="Nama">
@@ -197,7 +197,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblTelp">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Alamat :"/>
+                <Property name="text" type="java.lang.String" value="Adress        :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField2">
@@ -207,7 +207,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblHp">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Telp. :"/>
+                <Property name="text" type="java.lang.String" value="Phone         :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField3">
@@ -217,7 +217,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Fax :"/>
+                <Property name="text" type="java.lang.String" value="Fax            :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField1">
@@ -232,7 +232,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
-                <Property name="text" type="java.lang.String" value="NPWP :"/>
+                <Property name="text" type="java.lang.String" value="NPWP         :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
