pengantian menu receive order

--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -174,7 +174,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="outstandingorderItem">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Reserved Order"/>
+                <Property name="text" type="java.lang.String" value="Received Order"/>
                 <Property name="name" type="java.lang.String" value="outstandingorderItem" noResource="true"/>
               </Properties>
               <Events>
