--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -181,32 +181,15 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="outstandingorderItemActionPerformed"/>
               </Events>
             </MenuItem>
-            <Menu class="javax.swing.JMenu" name="productionRecord">
+            <MenuItem class="javax.swing.JMenuItem" name="PRItem">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Production Record"/>
-                <Property name="name" type="java.lang.String" value="productionRecord" noResource="true"/>
+                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+                <Property name="name" type="java.lang.String" value="PRItem" noResource="true"/>
               </Properties>
-              <SubComponents>
-                <MenuItem class="javax.swing.JMenuItem" name="PRNewItem">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="PR New"/>
-                    <Property name="name" type="java.lang.String" value="PRNewItem" noResource="true"/>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PRNewItemActionPerformed"/>
-                  </Events>
-                </MenuItem>
-                <MenuItem class="javax.swing.JMenuItem" name="PRFromSRItem">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="PR from SR"/>
-                    <Property name="name" type="java.lang.String" value="PRFromSRItem" noResource="true"/>
-                  </Properties>
-                  <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PRFromSRItemActionPerformed"/>
-                  </Events>
-                </MenuItem>
-              </SubComponents>
-            </Menu>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PRItemActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="POItem">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Purchase Order"/>
