Update Menu Production Record 1. Tambahkan Tarik data dari ReceivedOrder 2. isi otomatis Description dari SR, Style dari RO(ReceiveORder), item dari RO Received Order 3. gambar jika ditarik dari SR akan isi gambar langsung dari tabel SR.

--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -183,7 +183,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="PRItem">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem1"/>
+                <Property name="text" type="java.lang.String" value="Production Record"/>
                 <Property name="name" type="java.lang.String" value="PRItem" noResource="true"/>
               </Properties>
               <Events>
